--- a/markup.css
+++ b/markup.css
@@ -1,46 +1,65 @@
 @import url('https://cdn.jsdelivr.net/npm/@typopro/web-iosevka/TypoPRO-Iosevka.css');
+
+:host {
+  --markup-background: #F9F9F9;
+  --markup-color: #444;
+  --markup-shadow: #FFF;
+  --markup-variables: red;
+  --markup-keywords: olive;
+  --markup-punctators: green;
+  --markup-sequences: grey;
+  --markup-operators: limegreen;
+  --markup-combinator: steelblue;
+  --markup-breakers: grey;
+  --markup-quotes: teal;
+  --markup-closures: orange;
+  --markup-spans: coral;
+  --markup-comments: #AAA;
+  --markup-whitespace: #999;
+}
+
 .markup.variable {
-  --color: red;
+  --color: var(--markup-variables, red);
 }
 .markup.keyword {
-  --color: olive;
+  --color: var(--markup-keywords, olive);
 }
 .markup.punctuator {
-  --color: green;
+  --color: var(--markup-punctuators,  green);
   font-weight: 400;
 }
-/* .punctuation { --color: lightblue; } */
 .markup.sequence {
-  --color: grey;
+  --color: var(--markup-sequences,  grey);
 }
 .markup.operator {
-  --color: limegreen;
+  --color: var(--markup-operators,  limegreen);
 }
 .markup.combinator {
-  --color: steelblue;
+  --color: var(--markup-combinators,  steelblue);
 }
 .markup.breaker {
-  --color: grey;
+  --color: var(--markup-breakers,  grey);
 }
 .markup.quote,
 .markup.in-quote {
-  --color: teal;
+  --color: var(--markup-quotes,  teal);
 }
 .markup.opener,
 .markup.closer {
-  --color: orange;
+  --color: var(--markup-closures,  orange);
 }
 .markup.punctuator.span {
-  --color: coral;
+  --color: var(--markup-punctuators,  coral);
 }
 .markup.comment,
 .markup.in-comment {
-  --color: #aaa;
+  --color: var(--markup-comments, #aaa);
 }
 
+.markup.comment:hover,
 .markup.in-comment:hover,
 .markup.whitespace:hover {
-  --ring: #9992;
+  --ring: var(--markup-whitespaces, #999);
 }
 
 .markup {
@@ -48,20 +67,53 @@
   --ring: var(--hover, #999);
   --padding: 1.5px;
   color: var(--color, currentColor);
-  margin: calc(0px - var(--padding, 2px)) calc(-2 * var(--padding, 2px));
+  margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
   border-radius: 1ch;
   /* border-collapse: collapse; */
   /* background-clip: content-box; */
   border: var(--padding, 2px) solid transparent;
   border-left-width: calc(2 * var(--padding, 2px));
   border-right-width: calc(2 * var(--padding, 2px));
+  position: relative;
 }
 
 .markup:hover {
-  background-color: #FFF;
+  background-color: #fff;
   /* border-color: #FFFA; */
   filter: drop-shadow(0 0 1.5px var(--ring, currentColor)) drop-shadow(0 1px 3px #00000003);
   cursor: crosshair;
   opacity: 0.9;
-  z-index: 1;
+  z-index: 2;
+}
+.markup:hover::before {
+  all: initial;
+
+  display: block;
+  position: absolute;
+  pointer-events: none;
+
+  content: attr(class);
+  font-size: small;
+  font-family: inherit;
+  /* font-family: system-ui; */
+  /* font-weight: 300; */
+  white-space: pre;
+
+  background: #000A;
+  color: white;
+  text-shadow: 0 1px 0 #000;
+
+  box-shadow: inset 0 0 50px -15px var(--ring, currentColor);
+
+  border-radius: 1ch;
+  /* border-bottom-left-radius: 0; */
+  /* border-bottom-right-radius: 0; */
+  /* border-top: 0.25ch solid var(--ring, currentColor); */
+  border-bottom: 1ch solid var(--ring, currentColor);
+
+  padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
+  /* padding-bottom: calc(2 * var(--padding, 2px)); */
+  left: calc(-6 * var(--padding, 2px));
+  bottom: calc(100% + 0.25ch + -2 * var(--padding, 2px));
+  z-index: -1;
 }
