--- a/markup.css
+++ b/markup.css
@@ -68,66 +68,19 @@
   --color: var(--markup-comments, #aaa);
 }
 
-.markup.comment:hover,
-.markup.in-comment:hover,
-.markup.whitespace:hover {
-  --ring: var(--markup-whitespaces, #999);
-}
 
 .markup {
-  --hover: var(--color, #999);
-  --ring: var(--hover, #999);
-  --padding: 1.5px;
+  /* --hover: var(--color, #999); */
+  /* --ring: var(--hover, #999); */
+  /* --padding: 1.5px; */
   color: var(--color, currentColor);
-  margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
-  border-radius: 1ch;
+  /* margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px)); */
+  /* border-radius: 1ch; */
+  /* border: var(--padding, 2px) solid transparent; */
+  /* border-left-width: calc(2 * var(--padding, 2px)); */
+  /* border-right-width: calc(2 * var(--padding, 2px)); */
   /* border-collapse: collapse; */
   /* background-clip: content-box; */
-  border: var(--padding, 2px) solid transparent;
-  border-left-width: calc(2 * var(--padding, 2px));
-  border-right-width: calc(2 * var(--padding, 2px));
   /* position: relative; */
 }
 
-.markup:hover {
-  background-color: #fff;
-  /* border-color: #FFFA; */
-  filter: drop-shadow(0 0 1.5px var(--ring, currentColor)) drop-shadow(0 1px 3px #00000003);
-  cursor: crosshair;
-  opacity: 0.9;
-  z-index: 2;
-  position: relative;
-}
-.markup:hover::before {
-  all: initial;
-
-  display: block;
-  position: absolute;
-  pointer-events: none;
-
-  content: attr(class);
-  font-size: small;
-  font-family: inherit;
-  /* font-family: system-ui; */
-  /* font-weight: 300; */
-  white-space: pre;
-
-  background: #000a;
-  color: white;
-  text-shadow: 0 1px 0 #000;
-
-  box-shadow: inset 0 0 50px -15px var(--ring, currentColor);
-
-  border-radius: 1ch;
-  /* border-bottom-left-radius: 0; */
-  /* border-bottom-right-radius: 0; */
-  /* border-top: 0.25ch solid var(--ring, currentColor); */
-  border-bottom: 1ch solid var(--ring, currentColor);
-
-  padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
-  /* padding-bottom: calc(2 * var(--padding, 2px)); */
-  left: calc(-6 * var(--padding, 2px));
-  bottom: calc(100% + 0.25ch + -2 * var(--padding, 2px));
-  z-index: -1;
-  contain: layout content;
-}
