--- a/markup-hover.css
+++ b/markup-hover.css
@@ -1,33 +1,25 @@
-/* @import './markup.css'; */
-
 .markup.comment:hover,
 .markup.in-comment:hover,
 .markup.whitespace:hover {
-  --ring: var(--markup-whitespaces, #999);
+  --ring: var(--markup-whitespaces, var(--markup-neutral, #999));
 }
 
 .markup {
-  --hover: var(--color, #999);
-  --ring: var(--hover, #999);
+  --hover: var(--color, var(--markup-neutral, #999));
+  --ring: var(--hover, var(--markup-neutral, #999));
   --padding: 1.5px;
   margin: calc(-1 * var(--padding, 2px)) calc(-2 * var(--padding, 2px));
   border-radius: 1ch;
-  border: var(--padding, 2px) solid transparent;
-  border-left-width: calc(2 * var(--padding, 2px));
-  border-right-width: calc(2 * var(--padding, 2px));
-  /* border-collapse: collapse; */
-  /* background-clip: content-box; */
-  /* position: relative; */
+  border: calc(2 * var(--padding, 2px)) solid transparent;
 }
 
 .markup:hover {
-  background-color: #fff;
-  /* border-color: #FFFA; */
-  filter: drop-shadow(0 0 1.5px var(--ring, currentColor)) drop-shadow(0 1px 3px #00000003);
-  cursor: crosshair;
+  background-color: var(--markup-constast, white);
+  filter: drop-shadow(0 0 1.5px var(--ring, currentColor));
+  cursor: text;
   opacity: 0.9;
-  z-index: 2;
   position: relative;
+  z-index: 2;
 }
 
 .markup:hover::before {
@@ -40,26 +32,25 @@
   content: attr(class);
   font-size: small;
   font-family: inherit;
-  /* font-family: system-ui; */
   /* font-weight: 300; */
   white-space: pre;
 
-  background: #000a;
-  color: white;
-  text-shadow: 0 1px 0 #000;
+  background-color: #000a;
+  color: var(--markup-shadow, white);
+  text-shadow: 0 1px 0 var(--markup-color, #666);
 
   box-shadow: inset 0 0 50px -15px var(--ring, currentColor);
 
   border-radius: 1ch;
-  /* border-bottom-left-radius: 0; */
-  /* border-bottom-right-radius: 0; */
-  /* border-top: 0.25ch solid var(--ring, currentColor); */
   border-bottom: 1ch solid var(--ring, currentColor);
 
   padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
-  /* padding-bottom: calc(2 * var(--padding, 2px)); */
   left: calc(-6 * var(--padding, 2px));
   bottom: calc(100% + 0.25ch + -2 * var(--padding, 2px));
   z-index: -1;
   /* contain: layout content; */
+}
+
+.dark-mode .markup:hover::before {
+  background-color: #FFFA;
 }
