--- a/markup.css
+++ b/markup.css
@@ -13,41 +13,90 @@
   --markup-dark: #333f46;
   --markup-dark-fade: #333f4633;
 
-  --markup-background: var(--markup-light, #f9f9f9);
-  --markup-color: var(--markup-light-text, #666);
-  --markup-constast: white;
-  --markup-shadow: white;
+  /* Light Theme */
 
-  --markup-variables: red;
-  --markup-identifiers: darkslategrey;
-  --markup-keywords: chocolate;
-  --markup-punctators: green;
-  --markup-sequences: grey;
-  --markup-operators: limegreen;
-  --markup-combinators: cornflowerblue;
-  --markup-breakers: grey;
-  --markup-quotes: cadetblue;
-  --markup-closures: orange;
-  --markup-spans: coral;
+  --markup-light-background: var(--markup-light, #f9f9f9);
+  --markup-light-color: var(--markup-light-text, #666);
+  --markup-light-constast: white;
+  --markup-light-shadow: white;
 
-  --markup-comments: var(--markup-neutral-light, #aaa);
-  --markup-whitespace: var(--markup-neutral, #999);
+  --markup-light-variables: red;
+  --markup-light-identifiers: darkslategrey;
+  --markup-light-keywords: chocolate;
+  --markup-light-punctators: green;
+  --markup-light-sequences: grey;
+  --markup-light-operators: limegreen;
+  --markup-light-combinators: cornflowerblue;
+  --markup-light-breakers: grey;
+  --markup-light-quotes: cadetblue;
+  --markup-light-closures: orange;
+  --markup-light-spans: coral;
+
+  --markup-light-comments: var(--markup-neutral-light, #aaa);
+  --markup-light-whitespace: var(--markup-neutral, #999);
+
+  /* Dark Theme */
+
+  --markup-dark-background: var(--markup-dark, #333f46);
+  --markup-dark-color: var(--markup-dark-text, #eee);
+  --markup-dark-constast: #23262f;
+  --markup-dark-shadow: black;
+
+  --markup-dark-identifiers: lightgrey;
+  --markup-dark-punctators: limegreen;
+  --markup-dark-operators: lime;
+  --markup-dark-closures: darkorange;
+
+  --markup-dark-comments: var(--markup-neutral, #999);
+  --markup-dark-whitespace: var(--markup-neutral-dark, #666);
+
+
+  /* Light Mode */
+
+  --markup-background: var(--markup-light-background);
+  --markup-color: var(--markup-light-color);
+  --markup-constast: var(--markup-light-constast);
+  --markup-shadow: var(--markup-light-shadow);
+
+  --markup-variables: var(--markup-light-variables);
+  --markup-identifiers: var(--markup-light-identifiersar(--markup-identifiers));
+  --markup-keywords: var(--markup-light-keywords);
+  --markup-punctators: var(--markup-light-punctators);
+  --markup-sequences: var(--markup-light-sequences);
+  --markup-operators: var(--markup-light-operators);
+  --markup-combinators: var(--markup-light-combinatorsar(--markup-combinators));
+  --markup-breakers: var(--markup-light-breakers);
+  --markup-quotes: var(--markup-light-quotes);
+  --markup-closures: var(--markup-light-closures);
+  --markup-spans: var(--markup-light-spans);
+
+  --markup-comments: var(--markup-light-comments);
+  --markup-whitespace: var(--markup-light-whitespace);
+
+
 }
 
+/* TODO: Add support for @media (prefers-dark-mode) when it lands */
 .dark-mode, :host(.dark-mode) {
-  --markup-background: var(--markup-dark, #333f46);
-  --markup-color: var(--markup-dark-text, #eee);
-  --markup-constast: #23262f;
-  --markup-shadow: black;
+  --markup-background: var(--markup-dark-background, var(--markup-light-background));
+  --markup-color: var(--markup-dark-color, var(--markup-light-color));
+  --markup-constast: var(--markup-dark-constast, var(--markup-light-constast));
+  --markup-shadow: var(--markup-dark-shadow, var(--markup-light-shadow));
 
-  --markup-identifiers: lightgrey;
-  --markup-punctators: limegreen;
-  --markup-operators: lime;
-  --markup-closures: darkorange;
+  --markup-variables: var(--markup-dark-variables, var(--markup-light-variables));
+  --markup-identifiers: var(--markup-dark-identifiers, var(--markup-light-identifiers));
+  --markup-keywords: var(--markup-dark-keywords, var(--markup-light-keywords));
+  --markup-punctators: var(--markup-dark-punctators, var(--markup-light-punctators));
+  --markup-sequences: var(--markup-dark-sequences, var(--markup-light-sequences));
+  --markup-operators: var(--markup-dark-operators, var(--markup-light-operators));
+  --markup-combinators: var(--markup-dark-combinators, var(--markup-light-combinators));
+  --markup-breakers: var(--markup-dark-breakers, var(--markup-light-breakers));
+  --markup-quotes: var(--markup-dark-quotes, var(--markup-light-quotes));
+  --markup-closures: var(--markup-dark-closures, var(--markup-light-closures));
+  --markup-spans: var(--markup-dark-spans, var(--markup-light-spans));
 
-  --markup-comments: var(--markup-neutral, #999);
-  --markup-whitespace: var(--markup-neutral-dark, #666);
-
+  --markup-comments: var(--markup-dark-comments, var(--markup-light-comments));
+  --markup-whitespace: var(--markup-dark-whitespace, var(--markup-light-whitespace));
 }
 
 .markup:matches(.keyword, .breaker, .opener, .span, .assigner, .operator, .combinator, .comment)
