--- a/markup-hover.css
+++ b/markup-hover.css
@@ -15,11 +15,11 @@
 
 .markup:hover {
   background-color: var(--markup-constast, white);
-  filter: drop-shadow(0 0 1.5px var(--ring, currentColor));
+  box-shadow: 0 0 2.5px -0.5px var(--ring, currentColor);
   cursor: text;
-  opacity: 0.9;
   position: relative;
-  z-index: 2;
+  contain: strict;
+  /* z-index: 0; */
 }
 
 .markup:hover::before {
@@ -37,20 +37,21 @@
 
   background-color: #000a;
   color: var(--markup-shadow, white);
-  text-shadow: 0 1px 0 var(--markup-color, #666);
+  text-shadow: 0 1px 1px var(--markup-color, #666);
 
   box-shadow: inset 0 0 50px -15px var(--ring, currentColor);
+  filter: drop-shadow(0 0 1.5px var(--ring, currentColor));
 
   border-radius: 1ch;
   border-bottom: 1ch solid var(--ring, currentColor);
 
   padding: calc(3 * var(--padding, 2px)) calc(6 * var(--padding, 2px));
   left: calc(-6 * var(--padding, 2px));
-  bottom: calc(100% + 0.25ch + -2 * var(--padding, 2px));
-  z-index: -1;
-  /* contain: layout content; */
+  bottom: calc(100% + 0.5ch + -2 * var(--padding, 2px));
+
+  /* z-index: -1; */
 }
 
 .dark-mode .markup:hover::before {
-  background-color: #FFFA;
+  background-color: #fffa;
 }
