--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ body {
   font-family: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 200;
+  line-height: initial;
 
   z-index: 1;
 }
