--- a/packages/@smotaal/tokenizer/examples/browser/markup.css
+++ b/packages/@smotaal/tokenizer/examples/browser/markup.css
@@ -1,7 +1,6 @@
 @import url('https://cdn.jsdelivr.net/npm/@typopro/web-iosevka/TypoPRO-Iosevka.css');
 
 :root {
-
   /* Neutrals */
   --markup-neutral-light: #aaa;
   --markup-neutral: #999;
@@ -94,10 +93,23 @@
   --markup-whitespace: var(--markup-dark-whitespace, var(--markup-light-whitespace));
 }
 
+.markup.sequence {
+  --color: var(--markup-sequences, grey);
+}
+/*
+.markup.sequence.regexp {
+  --color: var(--markup-color, darkslategrey);
+  font-weight: bold;
+}
+*/
+
+/*
 .markup:matches(.keyword, .breaker, .opener, .span, .assigner, .operator, .combinator, .comment)
   + .markup.identifier {
+ */
+.markup.identifier {
   --color: var(--markup-identifiers, darkslategrey);
-  /* font-style: italic; */
+  font-style: italic;
 }
 
 .markup.variable {
@@ -112,10 +124,6 @@
 .markup.punctuator {
   --color: var(--markup-punctuators, lightseagreen);
   /* font-weight: 500; */
-}
-
-.markup.sequence {
-  --color: var(--markup-sequences, grey);
 }
 
 .markup.operator {
