--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
   /* text-shadow: 0 0.875px 0 var(--markup-shadow, #FFF); */
 
   line-height: 1.5em;
-  font-family: 'Iosevka', 'TypoPRO Iosevka Term', monospace;
+  font-family: 'Iosevka Web', monospace;
   font-variant-ligatures: contextual;
   /* text-rendering: optimizeSpeed; */
 
