--- a/packages/@smotaal/tokenizer/examples/browser/styles.css
+++ b/packages/@smotaal/tokenizer/examples/browser/styles.css
@@ -32,8 +32,6 @@ body {
   margin: 0;
   padding: 0;
 
-  background-color: #999;
-  font-size: 1rem;
   overflow-x: hidden;
   overflow-y: scroll;
   /* touch-action: pan-y; */
@@ -120,18 +118,11 @@ body {
   padding: 0.25ch 1ch;
 
   margin-bottom: 1ch;
-  border-radius: 1ch;
   white-space: normal;
 
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-
-  border: var(--outset-border, none);
-  background: linear-gradient(to right, var(--fill), var(--fill)), var(--clear);
-  color: var(--text);
-  text-shadow: var(--outset-shadow, 0 0 0) var(--shadow);
-  opacity: 0.9;
 
   font-family: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
@@ -257,4 +248,63 @@ i[icon] {
   padding: 0;
   margin: 0;
   transform: translateY(-100%);
+}
+
+@media screen {
+  body {
+    background-color: #999;
+    font-size: 1rem;
+  }
+  .markup-container > header {
+    border-radius: 1ch;
+    border: var(--outset-border, none);
+    background: linear-gradient(to right, var(--fill), var(--fill)), var(--clear);
+    color: var(--text);
+    text-shadow: var(--outset-shadow, 0 0 0) var(--shadow);
+    opacity: 0.9;
+
+  }
+}
+
+@media print {
+  .markup-container > header {
+    /* display: contents; */
+    /* position: relative; */
+    grid-auto-flow: row dense;
+
+    border: 0 double black;
+    padding-bottom: 1ch;
+    border-bottom-width: 4px;
+  }
+  .markup-container > header #controls {
+    display: none;
+  }
+
+  .markup-container > header::after {
+    display: block;
+    position: absolute;
+    outline: 1px solid red;
+  }
+
+  .markup-container {
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    font-size: 10pt;
+    /* max-width: 100vw; */
+  }
+
+  /*
+  .markup.comment + .markup.in-comment {
+    overflow: hidden;
+    white-space: pre-line;
+    display: inline-block;
+    max-height: 1.5em;
+    max-width: 50%;
+    max-width: -webkit-fill-available;
+    max-width: fill-available;
+    text-overflow: ellipsis;
+    outline: 1px solid red;
+  }
+   */
 }
