--- a/packages/@smotaal/tokenizer/examples/browser/styles.css
+++ b/packages/@smotaal/tokenizer/examples/browser/styles.css
@@ -17,46 +17,55 @@
   --markup-background: var(--markup-background, var(--markup-neutral-fade));
 }
 
-html {
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
-}
+@media screen {
+  html {
+    /* max-width: 100vw; */
+    /* height: 100vh; */
 
-body {
-  min-height: 100%;
-  width: 100%;
+    /* min-width: 100vw; */
+    min-height: 100vh;
 
-  display: flex;
-  flex-flow: column nowrap;
-  margin: 0;
-  padding: 0;
+    /* box-sizing: border-box; */
+    -webkit-text-size-adjust: 100%;
+  }
 
-  overflow-x: hidden;
-  overflow-y: scroll;
-  /* touch-action: pan-y; */
-  /* user-zoom: fixed; */
-  /* touch-action: pan-y; */
-  /* user-zoom: fixed; */
-  /* zoom: 1; */
-}
-
-@supports (padding: env(safe-area-inset-top)) {
   body {
-    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    /* height: inherit; */
+    /* width: inherit; */
+    min-height: inherit;
+    min-width: inherit;
+    max-height: inherit;
+    max-width: inherit;
+
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 0;
+    padding: 0;
+
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* touch-action: pan-y; */
+    /* user-zoom: fixed; */
+    /* touch-action: pan-y; */
+    /* user-zoom: fixed; */
+    /* zoom: 1; */
+  }
+
+  @supports (padding: env(safe-area-inset-top)) {
+    body {
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+    }
+  }
+  @supports (touch-action: pan-y) {
+    body {
+      touch-action: pan-y;
+    }
   }
 }
-@supports (touch-action: pan-y) {
-  body {
-    touch-action: pan-y;
-  }
-}
 
-/* textarea.no-resize {
-} */
 .markup-container {
-  box-sizing: border-box;
-  min-height: 100%;
+  /* box-sizing: border-box; */
+  /* min-height: 100%; */
 
   padding: 1ch;
   margin: 0;
@@ -176,9 +185,6 @@ body {
   font-weight: 700;
 }
 
-/* .markup-container > header div > [title] > [id]:not(empty) { min-width: 10em; } */
-/* .markup-container > header div > [title] > time:not(empty) { min-width: 1em; text-overflow: ellipsis; } */
-
 .markup-container > header div > [title] > [id] + time {
   font-size: 87.5%;
   user-select: none;
@@ -253,6 +259,7 @@ i[icon] {
 @media screen {
   body {
     background-color: #999;
+    background-color: var(--markup-background, #999);
     font-size: 1rem;
   }
   .markup-container > header {
@@ -262,7 +269,6 @@ i[icon] {
     color: var(--text);
     text-shadow: var(--outset-shadow, 0 0 0) var(--shadow);
     opacity: 0.9;
-
   }
 }
 
@@ -275,6 +281,7 @@ i[icon] {
     border: 0 double black;
     padding-bottom: 1ch;
     border-bottom-width: 4px;
+    position: initial;
   }
   .markup-container > header #controls {
     display: none;
@@ -286,12 +293,31 @@ i[icon] {
     outline: 1px solid red;
   }
 
+  :root {
+    --markup-color: black;
+    --markup-neutral-light: #aaa;
+    --markup-neutral-light: #777;
+    --markup-neutral-dark: #333;
+  }
+
   .markup-container {
     background: transparent;
     padding: 0;
     margin: 0;
     font-size: 10pt;
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
     /* max-width: 100vw; */
+  }
+
+  html,
+  body,
+  .markup-container {
+    width: 100%;
+    height: 100%;
+    overflow: initial;
+    position: initial;
   }
 
   /*
